static/renderer/styles/styles.css
/* ... */
.browse-right-sidebar__row--one-line {
  display: flex;
}
.browse-right-sidebar__row--one-line > :first-child {
  flex: 0 0 auto;
  white-space: pre;
}
.browse-right-sidebar__row--one-line > :last-child {
  flex: 1 1 auto;
  text-overflow: ellipsis;
  overflow: hidden;
  white-space: nowrap;
}
.browse-right-sidebar__row--additional-applications-header > :not(:first-child) {
  float: right;
}
.browse-right-sidebar__row--additional-applications-name {
  display: flex;
}
.browse-right-sidebar__row--additional-applications-name > :first-child {
  flex: 1 1 auto;
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
  font-weight: bold;
}
.browse-right-sidebar__row--additional-applications-name > :last-child {
  flex: 0 0 auto;
}
.browse-right-sidebar__row--save {
  background-color: #09090a;
  padding: 0.5rem;
}
.browse-right-sidebar__row--save > :last-child {
  float: right;
}
/* BrowseSidebar Title-Row */
.browse-right-sidebar__title-row {
  display: flex;
  margin-bottom: 0;
}
.browse-right-sidebar__title-row__title {
  display: flex;
  flex: 1 1 auto;
  overflow: hidden;
  height: 1.6rem;
  font-size: 1.15rem;
  font-weight: bold;
}
.browse-right-sidebar__title-row__title > * {
  flex: 1 1 auto;
  overflow-x: hidden;
  white-space: nowrap;
  text-overflow: ellipsis;
}
.browse-right-sidebar__title-row__buttons {
  flex: 0 0 auto;
  display: flex;
  margin-left: 0.3rem;
}
.browse-right-sidebar__title-row__buttons > *:not(:first-child) {
  margin-left: 0.6rem;
}
/* BrowseSidebar Title-Row Delete-Game */
.browse-right-sidebar__title-row__buttons__delete-game {
  height: 0.9rem;
  width: 0.9rem;
}
.browse-right-sidebar__title-row__buttons__delete-game .icon__use {
  fill: var(--theme__text-color);
}
.browse-right-sidebar__title-row__buttons__delete-game:hover .icon__use {
  fill: #b1b1b1;
}
.browse-right-sidebar__title-row__buttons__delete-game--active .icon__use,
.browse-right-sidebar__title-row__buttons__delete-game--active:hover .icon__use {
  fill: #8a1212;
}
/* BrowseSidebar Title-Row Remove-From-Playlist */
.browse-right-sidebar__title-row__buttons__remove-from-playlist {
  height: 0.9rem;
  width: 0.9rem;
}
.browse-right-sidebar__title-row__buttons__remove-from-playlist .icon__use {
  fill: var(--theme__text-color);
}
.browse-right-sidebar__title-row__buttons__remove-from-playlist:hover .icon__use {
  fill: #b1b1b1;
}
.browse-right-sidebar__title-row__buttons__remove-from-playlist--active .icon__use,
.browse-right-sidebar__title-row__buttons__remove-from-playlist--active:hover .icon__use {
  fill: #8a1212;
}
/* Browse-Right-Sidebar Row - Sub Elements */
.browse-right-sidebar__row__check-box {
  vertical-align: middle;
}
.browse-right-sidebar__row__screenshot {
  width: 100%;
}
.browse-right-sidebar__row__spacer {
  flex: 1 0 auto;
}
.browse-right-sidebar__row__game-id {
  user-select: text;
  padding-left: 0.25rem;
}
.browse-right-sidebar__row__date-added {
  user-select: text;
  padding-left: 0.25rem;
}
.browse-right-sidebar__row__editable-text {
  font-size: inherit;
  font-family: inherit;
  font-style: inherit;
}
/* Browse-Right-Sidebar Row - Notes */
.browse-right-sidebar__row .browse-right-sidebar__row__notes-edit {
  display: block;
  font-size: 0.9em;
  width: 100%;
  height: 16em;
  resize: vertical;
  font-size: inherit;
  font-family: inherit;
  font-style: inherit;
}
.browse-right-sidebar__row .browse-right-sidebar__row__notes-text {
  display: block;
  font-size: 0.9em;
  width: 100%;
  min-height: 1rem;
  white-space: pre-wrap;
}

/* GameList */
.game-list {
  background-color: var(--theme__background-color);
  /* --height | Height of list items (in pixels) */
}
/* GameList Item */
.game-list-item {
  display: flex;
  /* Pimp */
  list-style: none;
  background-color: var(--theme__background-color);
  color: #aaa;
}
.game-list-item--even {
  /* Pimp */
  background-color: #1e1e1f
}
.game-list-item:hover {
  /* Pimp */
  background-color: #3c3c41;
  color: #e6e6e6;
  cursor: pointer;
}
.game-list-item--selected {
  /* Pimp */
  background-color: #791c76;
  color: #cecece;
}
.game-list-item--selected:hover {
  /* Pimp */
  background-color: #a72aa2;
  color: #e6e6e6;
}
.game-list-item p {
  user-select: none;
}
/* GameList Item Thumb */
.game-list-item__thumb {
  background-size: contain;
  background-repeat: no-repeat;
  background-position: center;
}
/* GameList Item Right */
.game-list-item__right {
  --padding: calc(0.1px * var(--height));
  flex: 1;
  overflow: hidden;
  padding: var(--padding);
  padding-left: calc(3 * var(--padding));
}
.game-list-item__right__title {
  font-size: calc(0.384px * var(--height));
  white-space: nowrap;
  /* Pimp */
  text-overflow: ellipsis;
  overflow: hidden;
}
.game-list-item__right__genre {
  font-size: calc(0.256px * var(--height));
}
.game-list-item__right__icons {
  position: absolute;
  bottom: var(--padding);
  right: var(--padding);
}
.game-list-item__right__icons__icon {
  --size: calc(0.256px * var(--height));
  width: var(--size);
  height: var(--size);
  background-size: contain;
  background-repeat: no-repeat;
  background-position: center;
}
/* GameList NoGames */
.game-list__no-games {
  width: 100%;
  height: 100%;
  padding: 1em;
  text-align: center;
}
.game-list__no-games__title {
  font-size: 1.5rem;
}

/* GameList */
.game-grid {
  background-color: var(--theme__background-color);
  /* --width | Width of grid items (in pixels) */
  /* --height | Height of grid items (in pixels) */
}
/* GameList Item */
.game-grid-item {
  width: calc(1px * var(--width));
  height: calc(1px * var(--height));
  /* Pimp */
  list-style: none;
  color: #aaa;
}
.game-grid-item:hover {
  /* Pimp */
  background-color: #3c3c41;
  color: #e6e6e6;
  cursor: pointer;
}
.game-grid-item--selected {
  /* Pimp */
  background-color: #791c76;
  color: #cecece;
}
.game-grid-item--selected:hover {
  /* Pimp */
  background-color: #a72aa2;
  color: #e6e6e6;
}
/* ... */

